# cheshire-cat-ai-lm-studio

./: .gitignore  Dockerfile  README.md  bridge.py  compose.yml  pyproject.toml
data/: metadata.json
