[tool.poetry]
name = "cheshire-cat-ai-lm-studio"
version = "0.1.0"
description = ""
authors = ["ahmedrowaihi <ahmedrowaihi1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
